[gd_scene load_steps=23 format=2]

[ext_resource path="res://TestWorld.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound/TempShot.wav" type="AudioStream" id=2]
[ext_resource path="res://ScreenShaker.gd" type="Script" id=3]
[ext_resource path="res://test_env.tres" type="Environment" id=4]
[ext_resource path="res://Assets/DaysOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://PlayGUI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Progbar.png" type="Texture" id=7]
[ext_resource path="res://Splash.gd" type="Script" id=8]
[ext_resource path="res://Assets/ViewObjects/CatchAndRampAndBackdrop.glb" type="PackedScene" id=9]
[ext_resource path="res://SalvoGenerator.gd" type="Script" id=10]
[ext_resource path="res://Transitioner.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Sound/Ed_Allsounds/running-fiddlers-country-band-7742.mp3" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0.192157, 0.192157, 0.192157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=10]
size = 64
outline_size = 10
outline_color = Color( 0.192157, 0.192157, 0.192157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 6
outline_color = Color( 0.192157, 0.192157, 0.192157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="ConcavePolygonShape" id=7]
data = PoolVector3Array( -2.4381, 0.1137, -0.5832, 2.4381, 2.2319, -1.9212, 2.4381, 0.1137, -0.5832, -2.4381, 0.1137, -0.5832, -2.4381, 2.2319, -1.9212, 2.4381, 2.2319, -1.9212, 2.4381, 0.1137, -0.5832, -2.4381, 0, -0.5832, -2.4381, 0.1137, -0.5832, 2.4381, 0.1137, -0.5832, 2.4381, 0, -0.5832, -2.4381, 0, -0.5832 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( 2.4381, 0.1137, 0.5832, -2.4381, 2.2319, 1.9212, -2.4381, 0.1137, 0.5832, 2.4381, 0.1137, 0.5832, 2.4381, 2.2319, 1.9212, -2.4381, 2.2319, 1.9212, -2.4381, 0.1137, 0.5832, 2.4381, 0, 0.5832, 2.4381, 0.1137, 0.5832, -2.4381, 0.1137, 0.5832, -2.4381, 0, 0.5832, 2.4381, 0, 0.5832 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 1.0054, 0.1137, -1.9742, 2.3434, 2.2319, 1.9742, 1.0054, 0.1137, 1.9742, 1.0054, 0.1137, -1.9742, 2.3434, 2.2319, -1.9742, 2.3434, 2.2319, 1.9742, 1.0054, 0.1137, 1.9742, 1.0054, 0, -1.9742, 1.0054, 0.1137, -1.9742, 1.0054, 0.1137, 1.9742, 1.0054, 0, 1.9742, 1.0054, 0, -1.9742 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -1.0054, 0.1137, 1.9742, -2.3434, 2.2319, -1.9742, -1.0054, 0.1137, -1.9742, -1.0054, 0.1137, 1.9742, -2.3434, 2.2319, 1.9742, -2.3434, 2.2319, -1.9742, -1.0054, 0.1137, -1.9742, -1.0054, 0, 1.9742, -1.0054, 0.1137, 1.9742, -1.0054, 0.1137, -1.9742, -1.0054, 0, -1.9742, -1.0054, 0, 1.9742 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2, 1, 2 )

[node name="TestWorld" type="Spatial"]
script = ExtResource( 1 )

[node name="SalvoGenerator" type="Node" parent="."]
script = ExtResource( 10 )

[node name="DiceGunCenter" type="Position3D" parent="SalvoGenerator"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 18.5471, -24.7957 )

[node name="PlayGUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="PlayGUI"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0

[node name="LeftStars" type="HBoxContainer" parent="PlayGUI/HBoxContainer"]
margin_bottom = 43.0

[node name="Center" type="VBoxContainer" parent="PlayGUI/HBoxContainer"]
margin_left = 4.0
margin_right = 1000.0
margin_bottom = 43.0
size_flags_horizontal = 3

[node name="ScoreLabelCenterer" type="HBoxContainer" parent="PlayGUI/HBoxContainer/Center"]
margin_right = 996.0
margin_bottom = 39.0
alignment = 1

[node name="PlayerScoreLabel" type="Label" parent="PlayGUI/HBoxContainer/Center/ScoreLabelCenterer"]
margin_left = 441.0
margin_right = 465.0
margin_bottom = 39.0
theme = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="DashLabel" type="Label" parent="PlayGUI/HBoxContainer/Center/ScoreLabelCenterer"]
margin_left = 469.0
margin_right = 527.0
margin_bottom = 39.0
theme = SubResource( 6 )
text = "  -  "
align = 1
valign = 1

[node name="FoeScoreLabel" type="Label" parent="PlayGUI/HBoxContainer/Center/ScoreLabelCenterer"]
margin_left = 531.0
margin_right = 555.0
margin_bottom = 39.0
theme = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="TODO TEMP ROUND" type="ColorRect" parent="PlayGUI/HBoxContainer/Center"]
margin_top = 43.0
margin_right = 996.0
margin_bottom = 43.0

[node name="RightStars" type="HBoxContainer" parent="PlayGUI/HBoxContainer"]
margin_left = 1004.0
margin_right = 1004.0
margin_bottom = 43.0

[node name="Splash" type="PanelContainer" parent="PlayGUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -70.5
margin_bottom = 70.5
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="PlayGUI/Splash"]

[node name="SplashBackground" type="TextureRect" parent="PlayGUI/Splash"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_right = 1024.0
margin_bottom = 141.0
texture = ExtResource( 7 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayGUI/Splash"]
margin_right = 1024.0
margin_bottom = 141.0

[node name="SplashBigText" type="Label" parent="PlayGUI/Splash/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "Player Wins!"
align = 1
valign = 1

[node name="SplashSmallText" type="Label" parent="PlayGUI/Splash/VBoxContainer"]
margin_top = 86.0
margin_right = 1024.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 11 )
text = "Press any button to proceed."
align = 1
valign = 1
autowrap = true

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="CameraAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 28.7, 14.5 )

[node name="Camera" type="Camera" parent="CameraAnchor"]
environment = ExtResource( 4 )
current = true
fov = 22.9

[node name="ScreenShaker" type="Node" parent="CameraAnchor/Camera"]
script = ExtResource( 3 )

[node name="Lights" type="Spatial" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )

[node name="SpotLight" type="SpotLight" parent="Lights"]
transform = Transform( 0.0805949, -0.0246705, 0.0538129, 0, 0.0909025, 0.0416741, -0.0591985, -0.0335872, 0.0732628, 0.893849, 0.85132, 1.1608 )
spot_range = 22.9042

[node name="DirectionalLight" type="DirectionalLight" parent="Lights"]
transform = Transform( 0.1, 0, 0, 0, 0.0909025, 0.0416741, 0, -0.0416741, 0.0909025, 0, 3.3683, 2.3306 )

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.944169, 0.451286, -0.604156 )
light_energy = 0.3
light_indirect_energy = 0.2
omni_range = 43.2585

[node name="DirectionalLight2" type="DirectionalLight" parent="Lights"]
transform = Transform( 0.1, 0, 0, 0, 0.00194941, 0.099981, 0, -0.099981, 0.00194941, 0, 4.61101, 0 )
light_energy = 0.1

[node name="VisualMeshes" parent="." instance=ExtResource( 9 )]

[node name="StageColliders" type="Spatial" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="RampZ-(bY+)" type="StaticBody" parent="StageColliders"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="StageColliders/RampZ-(bY+)"]
shape = SubResource( 7 )

[node name="RampZ+(bY-)" type="StaticBody" parent="StageColliders"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="StageColliders/RampZ+(bY-)"]
shape = SubResource( 5 )

[node name="RampX+" type="StaticBody" parent="StageColliders"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="StageColliders/RampX+"]
shape = SubResource( 3 )

[node name="RampX-" type="StaticBody" parent="StageColliders"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="StageColliders/RampX-"]
shape = SubResource( 4 )

[node name="Floor" type="StaticBody" parent="StageColliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="StageColliders/Floor"]
shape = SubResource( 2 )

[node name="DiceBucketTop" type="Position3D" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 7.25085, -0.202316 )

[node name="SalvoStopHeightTrigger" type="Position3D" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 18.2423, -21.9469 )

[node name="MuzzleFlasher" type="Tween" parent="."]

[node name="Transitioner" parent="." instance=ExtResource( 11 )]

[node name="FadeSoundOut" type="Tween" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0
autoplay = true

[connection signal="tween_completed" from="MuzzleFlasher" to="." method="_on_MuzzleFlasher_tween_completed"]
